arreglos de responsive

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Siempre a tu lado
             <hr />
           </h2>
-          <h3>Descarga la app y disfruta de funcionalidades exclusivas</h3>
+          <h3>Descarga la app y disfruta de funcionalidades exclusivas.</h3>
           <div class="boton">
             <button>Descarga la app</button>
             <img src="./assets/img/PlayStore.png" alt="Play Store" />
